mule-user-guide/v/3.7/installing.adoc
= Installing Mule Runtime
:keywords: mule, esb, install mule, download

== Mule Installation Procedure

. link:/mule-user-guide/v/3.7/hardware-and-software-requirements[Check hardware and software requirements.]
. link:/mule-user-guide/v/3.7/downloading-and-starting-mule-esb[Download, then launch Mule.]
. link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Install an Enterprise license] (_optional_).

[TIP]
For instructions on installing Anypoint Studio, the IDE for creating integration applications, see link://anypoint-studio/v/6/download-and-launch-anypoint-studio[Download and Launch Studio]
== Which Version of Mule Am I Running?

Already have Mule installed? You can follow these steps in *Anypoint Studio* and *Mule Standalone* to determine the version number of your Mule runtime.

[tabs]
------
[tab,title="Studio"]
....
This procedure assumes that Studio is launched and that you have opened a new or existing project. If you have not yet opened your first project in Studio, click *File* > *New* > *Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

To view the Studio version, right-click the project name in Package Explorer. The version appears next to the mule-project.xml file name. You can also double-click the mule-project.xml file name and view the version in the Server Runtime field:

image:VersionNumber.png[VersionNumber]
....
[tab,title="Standalone"]
....
. Run Mule standalone from the command line.
+
Need More Detail?
+
.. Open a new command line.  +
*Windows*: Open the *Console*.  +
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
.. Access the directory and folder in which downloaded Mule. For example, type +
`cd /Users/myname/Downloads/mule-standalone-3.6.0/`
.. Start Mule. For example, type +
`./bin/mule`
. After Mule starts, scroll up in the command line window to find the  `Mule ESB and Integration Platform`  where Mule displays the version.
+
image:standalone.png[standalone]
....
------

== Installing Newer or Older Runtimes

Community users can obtain the latest versions of Mule Community on the *http://www.mulesoft.org/download-mule-esb-community-edition[Downloads page]* on mulesoft.org.

The standard download provided at the top of the link:http://www.mulesoft.org/download-mule-esb-community-edition[Downloads page] includes the latest version of *Anypoint Studio* bundled with a 30-day trial of the Mule Enterprise runtime versions. See link:/anypoint-studio/v/5/adding-community-runtime[Adding Community Runtime] for instructions on how to add the Community runtime, or other Mule runtimes, into your instance of Studio. When you create new projects or import projects, Studio prompts you to select the runtime to which you want to deploy your project.

[NOTE]
To download the latest *Mule Standalone runtime* _without_ Anypoint Studio, scroll down to the table on the Downloads page under the heading *Previous ESB Versions*.

To download a previous Standalone runtime version of Mule, scroll down further on the Downloads page to the section titled *Previous ESB Versions*.

Enterprise customers can obtain all versions of all Mule products on the *http://www.mulesoft.com/support-login[MuleSoft Customer Portal].*

After logging in, navigate to the *Downloads* tab where the most recent versions of Anypoint Studio, Mule Standalone, Mule Management Console, and the SAP transport are listed.

The latest version of *Anypoint Studio* includes the latest runtime version. See link:/anypoint-studio/v/5/installing-extensions[Installing Extensions] for instructions on how to add other Mule runtime versions into your Studio instance. When you create new projects or import projects into Studio, you can select the runtime on which you want to deploy your project.

To access previous versions of any MuleSoft product, click the *Content* tab, then search for the product to see all of its versions and associated downloads.

== See Also

* link:/mule-user-guide/v/3.7/starting-and-stopping-mule-esb[Starting and Stopping Mule]
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
