mule-user-guide/v/3.8/installing.adoc
= Installing and Deploying Mule Runtime
:keywords: mule, install, mule, download

Find out how to install Mule on this page. For deployment options, skip to link:/mule-user-guide/v/3.8/deploying[Deploying].

== Mule Installation Procedure

. link:/mule-user-guide/v/3.8/hardware-and-software-requirements[Check Hardware and Software Requirements]
. link:/mule-user-guide/v/3.8/downloading-and-starting-mule-esb[Download Mule Runtime]
. link:/mule-user-guide/v/3.8/installing-an-enterprise-license[Install an Enterprise license] (_optional_)
. link:/anypoint-studio/v/6/installing-extensions[Extend Mule with plugins, modules, runtimes and connectors] (_optional_)


[TIP]
For instructions on installing Anypoint Studio, the IDE for creating integration applications, see link:/anypoint-studio/v/6/download-and-launch-anypoint-studio[Download and Launch Studio]

== Which Version of Mule Am I Running?

If you already have Mule installed, you can follow these steps in *Anypoint Studio* or *Mule Standalone* to determine the version number of your Mule runtime.

[tabs]
------
[tab,title="Anypoint Studio"]
....
This procedure assumes that you have launched Studio and that you have opened a new or existing project. If you have not yet opened your first project in Studio, click *File* > *New* > *Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

To view the Studio version, right-click the project name in Package Explorer. The version appears next to the mule-project.xml file name. You can also double-click the *mule-project.xml* file name and view the version in the Server Runtime field:

image:VersionNumber.png[VersionNumber]
....
[tab,title="Mule Standalone"]
....
. Run Mule standalone from the command line.
+
Need More Detail?
+
.. Open a new command line.
+
*Windows*: Open the *Console*.
+
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
+
.. Access the directory and folder in which downloaded Mule. For example, type:
+
`cd /Users/myname/Downloads/mule-standalone-3.8.0/`
+
.. Start Mule. For example, type: `./bin/mule`
. After Mule starts, scroll up in the command line window to find the 
`Mule and Integration Platform` where Mule displays the version.
+
[source,code,linenums]
----
$ ./mule
MULE_HOME is set to /Users/me/Downloads/MULE/mule-enterprise-standalone-3.8.0
Running in console (foreground) mode by default, use Ctrl-C to exit...
MULE_HOME is set to /Users/me/Downloads/MULE/mule-enterprise-standalone-3.8.0
Running Mule Enterprise Edition...
  ...
Starting the Mule Container...
WrapperManager: Initializing...
INFO  2016-03-17 13:22:30,541 [WrapperListener_start_runner]
org.mule.module.launcher.MuleContainer:
*************************************************************
* Mule Runtime and Integration Platform                     *
* Version: 3.8.0 Build: 4254af00                            *
* MuleSoft, Inc.                                            *
* For more information go to                                *
* http://www.mulesoft.com/mule-esb-enterprise               *
*                                                           *
* Server started: 3/17/16 1:22 PM                           *
* JDK: 1.8.0_51 (mixed mode)                                *
* OS: Mac OS X (10.10.3, x86_64)                            *
* Host: MyMachine (172.16.42.54)                            *
*************************************************************
  ...
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started domain 'default'                                 +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
INFO  2016-03-17 13:22:43,706 [WrapperListener_start_runner]
org.mule.module.launcher.DefaultArchiveDeployer:
================== New Exploded Artifact: default
INFO  2016-03-17 13:22:43,714 [WrapperListener_start_runner] org.mule.module.launcher.application.DefaultMuleApplication:
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ New app 'default'                                        +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
INFO  2016-03-17 13:22:47,720 [WrapperListener_start_runner]
org.mule.module.launcher.MuleDeploymentService:
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'default'                                    +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
INFO  2016-03-17 13:22:47,753 [WrapperListener_start_runner]
org.mule.module.launcher.DeploymentDirectoryWatcher:
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Mule is up and kicking (every 5000ms)                    +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
INFO  2016-03-17 13:22:47,753 [WrapperListener_start_runner] com.mulesoft.mmc.agent.service.impl.StatusServiceDeploymentListener:
The MMC Agent Status Service is now enabled!
INFO  2016-03-17 13:22:47,760 [WrapperListener_start_runner] org.mule.module.launcher.StartupSummaryDeploymentListener:
************************************************************
*              - - + DOMAIN + - -     * - - + STATUS + - - *
************************************************************
* default                             * DEPLOYED           *
************************************************************

*********************************************************************
* - - + APPLICATION + - -  * - - + DOMAIN + - - * - - + STATUS + - -*
*********************************************************************
* default       * default       * DEPLOYED                          *
*********************************************************************
----
....
------

== Installing Newer or Older Runtimes

Community users can obtain the latest versions of Mule Community on the *link:http://www.mulesoft.org/download-mule-esb-community-edition[Downloads page]* on mulesoft.org.

The standard download provided at the top of the link:http://www.mulesoft.org/download-mule-esb-community-edition[Downloads page] includes the latest version of *Anypoint Studio* bundled with a 30-day trial of the Mule Enterprise runtime versions. See link:/anypoint-studio/v/6/adding-community-runtime[Adding Community Runtime] for instructions on how to add the Community runtime, or other Mule runtimes, into your instance of Studio. When you create new projects or import projects, Studio prompts you to select the runtime to which you want to deploy your project.

[NOTE]
To download the latest *Mule Standalone runtime* _without_ Anypoint Studio, scroll down to the table on the Downloads page under the heading *Previous Mule Versions*.

To download a previous Standalone runtime version of Mule, scroll down further on the Downloads page to the section titled *Previous Mule Versions*.

Enterprise customers can obtain all versions of all Mule products on the *http://www.mulesoft.com/support-login[MuleSoft Customer Portal].*

After logging in, navigate to the *Downloads* tab where the most recent versions of Anypoint Studio, Mule Standalone, Mule Management Console, and the SAP transport are listed.

The latest version of *Anypoint Studio* includes the latest runtime version. See link:/anypoint-studio/v/6/installing-extensions[Installing Extensions] for instructions on how to add other Mule runtime versions into your Studio instance. When you create new projects or import projects into Studio, you can select the runtime on which you want to deploy your project.

To access previous versions of any MuleSoft product, click the *Content* tab, then search for the product to see all of its versions and associated downloads.

== Deployment Options

You can deploy a Mule application to MuleSoft's managed cloud service link:/cloudhub/[CloudHub], and control various cloud and non-cloud deployments through MuleSoft's link:/runtime-manager[Runtime Manager].

To learn about Mule runtime deployment scenarios using WebLogic, Tomcat, WebSphere, or JBoss see link:/mule-user-guide/v/3.8/deployment-scenarios[Mule Runtime Standalone Deployment Scenarios] in the link:/mule-user-guide/v/3.8/deploying[Deploying] section.



== See Also

* link:/mule-user-guide/v/3.8/starting-and-stopping-mule-esb[Starting and Stopping Mule]
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
